--- a/src/404.html
+++ b/src/404.html
@@ -6,7 +6,8 @@
   <body>
 		<font size="7">
     <p>Welcome to <strong>R3P Digital Consulting</strong></p>
-		<p>This site is currently <strong>UNDER CONSTRUCTION!!!</strong> </p>
+		<p>This <strong>PAGE CANNOT BE FOUND</strong> </p>
 		</font>
   </body>
 </html>
+
