--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Welcome to R3P Digital Consulting</title>
-  </head>
-  <body>
-		<font size="7">
-    <p>Welcome to <strong>R3P Digital Consulting</strong></p>
-		<p>This site is currently <strong>UNDER CONSTRUCTION!!!</strong> </p>
-		</font>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Welcome to R3P Digital Consulting</title>
+</head>
+
+<body>
+  <main>
+    <h1>Welcome to R3P Digital Consulting</h1>
+    <h2>This site is currently UNDER CONSTRUCTION</h2>
+  </main>
+</body>
+
 </html>
